--- a/front-end/src/app/header/header.component.html
+++ b/front-end/src/app/header/header.component.html
@@ -3,4 +3,5 @@
 
     <a class="navigation" [routerLink]="['/quiz-list']">Quiz</a>
     <a class="navigation" [routerLink]="['/user-list']">Users</a>
+    <a href="accueil" class="button">accueil</a>
 </div>
