--- a/front-end/src/app/accueil/accueil.component.html
+++ b/front-end/src/app/accueil/accueil.component.html
@@ -6,9 +6,10 @@
 <body>
     <header id="showcase">
         <h1>Bienvenue sur notre site</h1>
-        <p> Choisissez un theme</p>
-        <a href="quiztest" class="button">Famille</a>
-        <a href="quiz-list" class="button">cinema</a>
-        <a href="quiz-list" class="button">Sport</a>
+        <p></p>
+        <h2></h2>
+        <a href="DataPatient" class="button">Proche d'un patient</a>
+        <a href="pagedeconnexion" class="button">  Psychomotricien </a>
+        
     </header>
 </body>
