--- a/front-end/src/app/header/header.component.html
+++ b/front-end/src/app/header/header.component.html
@@ -1,7 +1,12 @@
 <div class="header">
-    MyApp
+    AlzheimerQuiz
 
+    <a href="accueil" class="button">Accueil</a>
     <a class="navigation" [routerLink]="['/quiz-list']">Quiz</a>
+    <a href="stats-quiz" class="button">StatsQuiz</a>
     <a class="navigation" [routerLink]="['/user-list']">Users</a>
-    <a href="accueil" class="button">accueil</a>
+    <a href="DataPatient" class="button">DataPatient</a>
+    <a href="tabdon" class="button">tabdon</a>
+    <a href="recap" class="button">recap</a>
+
 </div>
