--- a/front-end/src/app/accueil/accueil.component.scss
+++ b/front-end/src/app/accueil/accueil.component.scss
@@ -8,7 +8,7 @@ body{
     font-size: 17px;
     color: #000000;
     line-height : 1.6;
-
+    
 
 }
 
@@ -25,18 +25,32 @@ body{
     padding: 0 20px;
 
 
+
 }
 
 #showcase h1{
     font-size: 50px;
+    z-index: 1;
 }
 #showcase p{
     font-size: 25px;
 }
+#showcase h2{
+    background: #c4c4c4;
+    z-index: 0;
+    opacity: 0.7;
+    width: 100%;
+    height: 1280px;
+    position: fixed;
+    border: #000000;
+}
+
 #showcase .button {
+    font-weight: bold;
+    
     position: relative;
     top: 40px; left: 40px;
-    font-size: 18px;
+    font-size: 34px;
     text-decoration: solid;
     color: #926239;
     border: #926239 2px solid;
